--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="php/contactfrom.php" name="cform" id="cform">
+                                    <form method="post" action="js/contact/contact.js" name="cform" id="cform">
 
                                     	<label>What's your name <span>*</span>
 
@@ -202,7 +202,7 @@
 
                                         <div class="clearfix"></div>
 
-                                        <label>What's on your mind
+                                        <label>Get in contact or just say Hi :D
 
                                         	<textarea name="comments" id="comments" cols="" rows=""></textarea>
 
@@ -210,9 +210,12 @@
 
                                         <div class="clearfix"></div>
 
-                                        <input name="" type="submit" value="Send">
+                                        <input name="" type="submit" value="Send" id = "submitBttn">
+                                        <!-- onsubmit = "sendContact();" -->
 
                                     	<div id="simple-msg"></div>
+
+                                      <script src="js/contact/contact.js" type="text/javascript"></script>
 
                                     </form>
 
