--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
       
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 padding-top">
         <ul class="social">
+          <li><a href="https://www.flickr.com/photos/197231574@N06/"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
           <li><a href="https://www.instagram.com/ceceliaquinnphoto/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           <li><a href="mailto:ceceliaquinnphoto@gmail.com"><i class="fa fa-google" aria-hidden="true"></i></a></li>
         </ul>
