Added new photos, fixed errors with old map system, fixed bug where top of MENU text was disappearing, improved look of menu

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <li class="masonry-item grid">
           <figure class="effect-sarah"> <img src="images/gallery/04.jpg" alt="" />
             <figcaption>
-              <h2><span>Rustic: </span>10-19-2022</h2>
-              <p class="description">I'm a huge fan of rustic looking scenery like this, something about wood textures and greenery create a sense of nostalgia and comfort in me.</p>
+              <h2><span>Flowers: </span>10-19-2022</h2>
+              <p class="description">A beautiful landscape of sunflowers: a stunning yet common view with my own spin on it.</p>
               <!--<a href="details.html">View more</a> --> </figcaption>
           </figure>
         </li>
@@ -151,8 +151,8 @@
         <li class="masonry-item grid">
           <figure class="effect-sarah"> <img src="images/gallery/06.jpg" alt="" />
             <figcaption>
-              <h2><span>Pride: </span>6-25-2022</h2>
-              <p class="description">Taken at Houston's Pride Parade. A quick portrait of my closest friend at our first pride! I wouldn't have wanted to attend my first pride with anyone else! We had an absolutely incredible time.</p>
+              <h2><span>Pets: </span>10-23-2022</h2>
+              <p class="description">A photo depicting a distinguished gentleman on his best behavior.</p>
               <!--<a href="details.html">View more</a> --> </figcaption>
           </figure>
         </li>
@@ -167,8 +167,8 @@
         <li class="masonry-item grid">
           <figure class="effect-sarah"> <img src="images/gallery/08.jpg" alt="" />
             <figcaption>
-              <h2><span>Pets: </span>4-22-2022</h2>
-              <p class="description">Here's an adorable photo of my friend's dog, Charlie. He's just a little guy <3 </p>
+                <h2><span>Pride: </span>6-25-2022</h2>
+              <p class="description">Taken at Houston's Pride Parade. A quick portrait of my closest friend at our first pride! I wouldn't have wanted to attend my first pride with anyone else! We had an absolutely incredible time.</p>
               <!--<a href="details.html">View more</a> --> </figcaption>
           </figure>
         </li>
@@ -183,8 +183,8 @@
         <li class="masonry-item grid">
           <figure class="effect-sarah"> <img src="images/gallery/10.jpg" alt="" />
             <figcaption>
-              <h2><span>Pride: </span>6-25-2022</h2>
-              <p class="description">A closer look at my friend's incredible outfit for the pride parade.</p>
+              <h2><span>Pets: </span>12-23-2022</h2>
+              <p class="description">A savage portrait of my sister's dog. I wanted to show his beauty as well as his strength to create a stunning contrast for this portrait.</p>
               <!--<a href="details.html">View more</a> --> </figcaption>
           </figure>
         </li>
@@ -199,8 +199,8 @@
         <li class="masonry-item grid">
           <figure class="effect-sarah"> <img src="images/gallery/12.jpg" alt="" />
             <figcaption>
-              <h2><span>Pride: </span>4-2-2022</h2>
-              <p class="description">I attended a transgender rights rally outside the Texas Capital in Austin, and met some incredible friends, who I'll never forget!!</p>
+              <h2><span>Pride: </span>6-25-2022</h2>
+              <p class="description">A closer look at my friend's incredible outfit for the pride parade.</p>
               <!--<a href="details.html">View more</a> --> </figcaption>
           </figure>
         </li>
@@ -266,15 +266,39 @@
         </li>
       </li>
       <li class="masonry-item grid">
-       <figure class="effect-sarah"> <img src="images/gallery/20.jpg" alt="" />
-         <figcaption>
-           <h2><span>Love: </span>3-25-2022</h2>
-           <p class="description">I saw this bachlorette group taking photos at the Oasis and offered to take a photo for them. Unfortunately, they didn't write down my number properly or forgot to reach out, 
-            so I was never able to give them their photos!
-           </p>
-           <!--<a href="details.html">View more</a> --> </figcaption>
-       </figure>
-     </li>
+        <figure class="effect-sarah"> <img src="images/gallery/20.jpg" alt="" />
+          <figcaption>
+            <h2><span>Rustic: </span>10-19-2022</h2>
+            <p class="description">I'm a huge fan of rustic looking scenery like this, something about wood textures and greenery create a sense of nostalgia and comfort in me.</p>
+            <!--<a href="details.html">View more</a> --> </figcaption>
+        </figure>
+      </li>
+     <li class="masonry-item grid">
+      <figure class="effect-sarah"> <img src="images/gallery/21.jpg" alt="" />
+        <figcaption>
+          <h2><span>Pets: </span>4-22-2022</h2>
+              <p class="description">Here's an adorable photo of my friend's dog, Charlie. He's just a little guy <3 </p>
+          <!--<a href="details.html">View more</a> --> </figcaption>
+      </figure>
+    </li>
+    <li class="masonry-item grid">
+      <figure class="effect-sarah"> <img src="images/gallery/22.jpg" alt="" />
+        <figcaption>
+          <h2><span>Pride: </span>4-2-2022</h2>
+              <p class="description">I attended a transgender rights rally outside the Texas Capital in Austin, and met some incredible friends, who I'll never forget!!</p>
+          <!--<a href="details.html">View more</a> --> </figcaption>
+      </figure>
+    </li>
+    <li class="masonry-item grid">
+      <figure class="effect-sarah"> <img src="images/gallery/23.jpg" alt="" />
+        <figcaption>
+          <h2><span>Love: </span>3-25-2022</h2>
+          <p class="description">I saw this bachlorette group taking photos at the Oasis and offered to take a photo for them. Unfortunately, they didn't write down my number properly or forgot to reach out, 
+           so I was never able to give them their photos!
+          </p>
+          <!--<a href="details.html">View more</a> --> </figcaption>
+      </figure>
+    </li>
       </ul>
     </div>
   </div>
