--- a/about.html
+++ b/about.html
@@ -114,6 +114,8 @@
 
                                         <li class="active"><a href="about.html">About</a></li>
 
+                                        <li><a href="pricing.html">pricing</a></li>
+
                                         <li><a href="blog.html">blog</a></li>
 
                                         <li><a href="contact.html">contact</a></li>
