--- a/contact.html
+++ b/contact.html
@@ -114,9 +114,11 @@
 
                                         <li><a href="about.html">About</a></li>
 
-                                        <li><a href="blog.html">blog</a></li>
+                                        <li><a href="pricing.html">Pricing</a></li>
 
-                                        <li class="active"><a href="contact.html">contact</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
+
+                                        <li class="active"><a href="contact.html">Contact</a></li>
 
                                     </ul>
 
