--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">pricing</a></li>
               <li><a href="blog.html">blog</a></li>
               <li><a href="contact.html">contact</a></li>
             </ul>
