Created files for eventual pages for each photography type, added an image 07, changed figures to images, changed width of lines in over menu

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     <div class="">
       <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 masonry">
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/01.jpg" alt="" />
+          <image class="effect-sarah"> <img src="images/gallery/01.jpg" alt="" />
+          <!--<image class="effect-sarah"> <img src="images/gallery/01.jpg" alt="" />
             <figcaption>
               <h2><span>Portraits: </span>10-19-2022</h2>
               <p>As a budding photographer, I had always been interested in portrait photography, but it wasn't until a close friend took a photo of me 
@@ -107,199 +108,82 @@
                 can have in helping someone feel seen, accepted, and beautiful. From that moment on, I made it my mission to capture and showcase the beauty that all people 
                 have, even if they can't see it themselves.
                 </p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+              </image>
+            -->
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/02.jpg" alt="" />
-            <figcaption>
-              <h2><span>Rustic: </span>9-20-2022</h2>
-              <p>An old ford truck I came across in the University of Texas-North Campus area. The lack of acceptance in the car community has made it hard to appreciate cool old
-                cars and trucks like this one.
-              </p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/02.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/03.jpg" alt="" />
-            <figcaption>
-              <h2><span>Portraits: </span>8-18-2022</h2>
-              <p class="description">Taken during my first anniversary on hormones. One of the happiest memories of my life, surrounded by my closest friends and my chosen family.
-                 I'm glad I took the time to document my party as looking back at these photos
-                I'm still able to relive the day.
-              </p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/03.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/04.jpg" alt="" />
-            <figcaption>
-              <h2><span>Flowers: </span>10-19-2022</h2>
-              <p class="description">A beautiful landscape of sunflowers: a stunning yet common view with my own spin on it.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/04.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/05.jpg" alt="" />
-            <figcaption>
-              <h2><span>Portraits: </span>10-19-2022</h2>
-              <p class="description">
-                Taken at Auditorium shores right across the river from downtown austin. Austin is a beautiful safe haven for those of us who aren't safe in the rest of Texas.
-              </p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/05.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/06.jpg" alt="" />
-            <figcaption>
-              <h2><span>Pets: </span>10-23-2022</h2>
-              <p class="description">A photo depicting a distinguished gentleman on his best behavior.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/06.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/07.jpg" alt="" />
-            <figcaption>
-              <h2><span>Flowers: </span>10-19-2022</h2>
-              <p class="description">One of my favorite photograhs despite the subject being relatively generic, I feel I brought a unique perspective to this photo that  I haven't seen before.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/07.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/08.jpg" alt="" />
-            <figcaption>
-                <h2><span>Pride: </span>6-25-2022</h2>
-              <p class="description">Taken at Houston's Pride Parade. A quick portrait of my closest friend at our first pride! I wouldn't have wanted to attend my first pride with anyone else! We had an absolutely incredible time.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/08.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/09.jpg" alt="" />
-            <figcaption>
-              <h2><span>Portraits: </span>10-19-2022</h2>
-              <p class="description">Another stunning portrait of a friend of mine at Auditorium Shores in Austin, Texas.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/09.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/10.jpg" alt="" />
-            <figcaption>
-              <h2><span>Pets: </span>12-23-2022</h2>
-              <p class="description">A savage portrait of my sister's dog. I wanted to show his beauty as well as his strength to create a stunning contrast for this portrait.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/10.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/11.jpg" alt="" />
-            <figcaption>
-              <h2><span>Landscapes: </span>10-19-2022</h2>
-              <p class="description">A stunning landscape image of a frieght train crossing a bridge from downtown Austin.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/11.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/12.jpg" alt="" />
-            <figcaption>
-              <h2><span>Pride: </span>6-25-2022</h2>
-              <p class="description">A closer look at my friend's incredible outfit for the pride parade.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/12.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/13.jpg" alt="" />
-            <figcaption>
-              <h2><span>Headshots: </span>11-12-2022</h2>
-              <p class="description">A fantastic example of the kinds of headshots I take. I prefer outdoor settings with real smiles and actual posing as opposed to the lifeless corporate headshots
-                 most photographers take. Headshots are meant to show YOU off, it's important to stand out with a stunning portrait.
-              </p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/13.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/14.jpg" alt="" />
-            <figcaption>
-              <h2><span>Pride: </span>4-2-2022</h2>
-              <p class="description">My friend Noah, wrapped in their transgender flag, who I met for the first time just after taking his photo. Photography is a fantastic way to meet new people.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
-        </li>
-
-        <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/15.jpg" alt="" />
-            <figcaption>
-              <h2><span>Flowers: </span>9-20-2022</h2>
-              <p class="description">A lone sunflower baked in sunlight.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
-        </li>
-        
-        <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/16.jpg" alt="" />
-            <figcaption>
-              <h2><span>Pride: </span>6-25-2022</h2>
-              <p class="description">Taken at Houston's Pride Parade. My closest friend and I's first pride, we had an incredible time even though we had to put up with Houston's lovely excruciating heat.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/14.jpg" alt="" />
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/17.jpg" alt="" />
-            <figcaption>
-              <h2><span>Flowers: </span>10-19-2022</h2>
-              <p class="description">Hazy sunflowers with light sifting through their petals. An absolutely gorgeous day in Austin for photography.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/15.jpg" alt="" />
+        </li>
+        <li class="masonry-item grid">
+          <image class="effect-sarah"> <img src="images/gallery/16.jpg" alt="" />
+        </li>
+        <li class="masonry-item grid">
+          <image class="effect-sarah"> <img src="images/gallery/17.jpg" alt="" />
         </li>
          <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/18.jpg" alt="" />
-            <figcaption>
-              <h2><span>Portraits: </span>2-12-2022</h2>
-              <p class="description">A portrait of my parents showing off the beautiful Texas capital.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/18.jpg" alt="" />
         </li>
          <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/19.jpg" alt="" />
-            <figcaption>
-              <h2><span>Rustic: </span>2-19-2022</h2>
-              <p class="description">A sunken camper van on my friend's family's ranch used as a home for the fish living in their pond. Such a beautiful metaphor for bringing life with the death of an object.</p>
-              <!--<a href="details.html">View more</a> --> </figcaption>
-          </figure>
+          <image class="effect-sarah"> <img src="images/gallery/19.jpg" alt="" />
         </li>
+      <li class="masonry-item grid">
+        <image class="effect-sarah"> <img src="images/gallery/20.jpg" alt="" />
       </li>
       <li class="masonry-item grid">
-        <figure class="effect-sarah"> <img src="images/gallery/20.jpg" alt="" />
-          <figcaption>
-            <h2><span>Rustic: </span>10-19-2022</h2>
-            <p class="description">I'm a huge fan of rustic looking scenery like this, something about wood textures and greenery create a sense of nostalgia and comfort in me.</p>
-            <!--<a href="details.html">View more</a> --> </figcaption>
-        </figure>
+        <image class="effect-sarah"> <img src="images/gallery/21.jpg" alt="" />
       </li>
-     <li class="masonry-item grid">
-      <figure class="effect-sarah"> <img src="images/gallery/21.jpg" alt="" />
-        <figcaption>
-          <h2><span>Pets: </span>4-22-2022</h2>
-              <p class="description">Here's an adorable photo of my friend's dog, Charlie. He's just a little guy <3 </p>
-          <!--<a href="details.html">View more</a> --> </figcaption>
-      </figure>
-    </li>
-    <li class="masonry-item grid">
-      <figure class="effect-sarah"> <img src="images/gallery/22.jpg" alt="" />
-        <figcaption>
-          <h2><span>Pride: </span>4-2-2022</h2>
-              <p class="description">I attended a transgender rights rally outside the Texas Capital in Austin, and met some incredible friends, who I'll never forget!!</p>
-          <!--<a href="details.html">View more</a> --> </figcaption>
-      </figure>
-    </li>
-    <li class="masonry-item grid">
-      <figure class="effect-sarah"> <img src="images/gallery/23.jpg" alt="" />
-        <figcaption>
+      <li class="masonry-item grid">
+        <image class="effect-sarah"> <img src="images/gallery/22.jpg" alt="" />
+      </li>
+      <li class="masonry-item grid">
+        <image class="effect-sarah"> <img src="images/gallery/23.jpg" alt="" />
+        <!--<figcaption>
           <h2><span>Love: </span>3-25-2022</h2>
           <p class="description">I saw this bachlorette group taking photos at the Oasis and offered to take a photo for them. Unfortunately, they didn't write down my number properly or forgot to reach out, 
            so I was never able to give them their photos!
           </p>
-          <!--<a href="details.html">View more</a> --> </figcaption>
-      </figure>
-    </li>
+          <!--<a href="details.html">View more</a> </figcaption>
+      </figure>-->
+      </li>
       </ul>
     </div>
   </div>
